--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-        <img src="icons/pswk.svg" alt="PSWK" class="logo">
+        <img src="icons/logoBlack.svg" alt="PSWK" class="logo">
     <nav>
         <div id="Burger">
 
@@ -133,11 +133,12 @@
                     kill myself! I love you bad, bobo! There is no god, in your face! One <span class="motCle" id="motAvion">Avion</span> dot muthafucka! What is this, 90's
                     Conan? </p>
                 <p>That guy is the Red Grin Grumbold of pretending he knows what's going on. Oh you agree huh? You like that
-                    Red Grin Grumbold reference? Well guess what, I made him up. You really are your father's children. Think
+                    Red Grin Grumbold reference? Think
                     for yourselves, don't be sheep <span class="motCle" id="motCrossfit">Crossfit</span>. Dont look at me! That guy over there roped me into this. These 2 halves
                     don't belong together, bitch! What is this, 90's Conan?</p>
 
                     <a href="" id="cv">Télécharger mon CV</a>
+                    <a href="" id="cvButton"><button>Télécharger mon CV</button></a>
             </div>
             <div class="aboutPhoto">
                     <img src="img/crossfit.jpg" alt="" class="imageCle" id="crossfit">
